--- a/guli-microservice-edu/src/main/resources/application.properties
+++ b/guli-microservice-edu/src/main/resources/application.properties
@@ -8,9 +8,9 @@ spring.profiles.active=dev
 
 # mysql数据库连接
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/guli_edu_190105?characterEncoding=utf-8&useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/guli_edu?characterEncoding=utf-8&useSSL=false
 spring.datasource.username=root
-spring.datasource.password=123456
+spring.datasource.password=
 
 # Hikari是Spring Boot 2.0之后默认整合的数据库连接池，比druid更快的数据库连接池
 # 数据源类型
